# STEM_Python_Course

./: .gitignore  .replit  README.md  jupyter_notebook_config.py  participant_schedule.md  requirements.txt  startup.sh
01_Day_2/: 00_simple_program_activity.ipynb  my_pet_info.json
01_Day_2/ExtraExamples/: customizing.ipynb  pyplot.ipynb  sample_plots.ipynb
01_Day_2/WorkProblems/: linesinxandcosx.csv  sinx.csv  sinxcosx.csv
01_Week1/: 00_simple_program_activity.ipynb  02_broken_loops_activity.ipynb  05_packages_activity.ipynb  README.md
02_Week2/: README.md
Day_1/: README.md
Day_2/: Python_Core.ipynb  readme.md  vehicle.pickle
Day_3/: README.md  day_3_exercises.ipynb  day_3_lesson.ipynb  get_primes.pyx  get_primes_mp.py  wave_propogation.pyx
Day_3/src/cpp/: CMakeLists.txt  wave_propogation.pyx  wp.cpp  wp.hpp
Day_4/: Library_GraphTwoDimensionDensityColorMap.py  Library_PrintNumpyArrayInfo.py  Test_NumpyTwoDimensionalDataset.py  Type_NumpyTwoDimensionalDataset.py  day_4_student_completed_workbook_introduction.ipynb  day_4_student_completed_workbook_likelihood_analysis.ipynb  day_4_student_completed_workbook_probability_theory.ipynb  day_4_student_empty_workbook_likelihood_analysis.ipynb  day_4_student_empty_workbook_probability_theory.ipynb  student_completed_workbook_introduction.ipynb  student_completed_workbook_likelihood_analysis.ipynb  student_completed_workbook_probability_theory.ipynb  student_empty_workbook_likelihood_analysis.ipynb  student_empty_workbook_probability_theory.ipynb
Day_5/: Class_Vehicles.ipynb  README.md
(+172 files in other folders)
